added summary comments

--- a/about.html
+++ b/about.html
@@ -190,6 +190,9 @@
  
     
     <script>
+        /* This code adds event listeners to a website's navigation menu to enable dropdown menus.
+		 It allows the menu to open and close when clicking a burger icon and closes dropdowns when clicking outside the menu.*/
+		 
      document.addEventListener('DOMContentLoaded', function () {
     // Get the burger icon for the main menu
     var burgerMain = document.getElementById('navbarBurger');
